[gd_scene load_steps=5 format=3 uid="uid://c0g7nvoiai8cl"]

[ext_resource type="Texture2D" uid="uid://ypd2n0uf3k1f" path="res://sprites/background_brown.png" id="1_ahc6v"]
[ext_resource type="Script" path="res://scripts/game_board.gd" id="1_whn1i"]
[ext_resource type="PackedScene" uid="uid://f21j21uc8foa" path="res://scenes/wall.tscn" id="5_b1vp3"]
[ext_resource type="Script" path="res://scripts/AudioManager.gd" id="6_ev2g4"]

[node name="GameBoard" type="Node2D"]
script = ExtResource("1_whn1i")
ball_start_speed = 200
paddle_base_speed = 300

[node name="Background" type="TextureRect" parent="."]
offset_left = -192.0
offset_top = -192.0
offset_right = 1344.0
offset_bottom = 832.0
texture = ExtResource("1_ahc6v")
stretch_mode = 1

[node name="UI" type="Control" parent="."]
top_level = true
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 640.0

[node name="StartButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 504.0
offset_top = 328.0
offset_right = 648.0
offset_bottom = 384.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 31
text = "Start"

[node name="ScoreLabel" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = -2.0
offset_right = 88.0
offset_bottom = 40.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 30
text = "Score"

[node name="LivesLabel" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = 1032.0
offset_top = -2.0
offset_right = 1168.0
offset_bottom = 40.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 30
text = "Lives 0"

[node name="GameOverLabel" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = 392.0
offset_top = 152.0
offset_right = 760.0
offset_bottom = 264.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 64
text = "GAME OVER"

[node name="LevelLabel" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_left = 392.0
offset_top = 144.0
offset_right = 768.0
offset_bottom = 232.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 64
text = "Level 1"
horizontal_alignment = 1

[node name="GameWinLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 212.0
offset_top = 144.0
offset_right = 940.0
offset_bottom = 256.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 64
text = "YOU WIN"
horizontal_alignment = 1

[node name="PaddleStartPosition" type="Node2D" parent="."]
position = Vector2(512, 608)

[node name="BallStartPosition" type="Node2D" parent="."]
position = Vector2(576, 416)

[node name="LevelStartPosition" type="Node2D" parent="."]

[node name="Wall" parent="." groups=["wall"] instance=ExtResource("5_b1vp3")]
position = Vector2(0, 4)

[node name="Wall2" parent="." groups=["death"] instance=ExtResource("5_b1vp3")]
position = Vector2(0, 692)

[node name="Wall3" parent="." groups=["wall"] instance=ExtResource("5_b1vp3")]
position = Vector2(-44, -72)
rotation = 1.5708

[node name="Wall4" parent="." groups=["wall"] instance=ExtResource("5_b1vp3")]
position = Vector2(1148, -72)
rotation = 1.5708

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("6_ev2g4")

[node name="LevelStartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="UI/StartButton" to="." method="_on_start_pressed"]
[connection signal="timeout" from="LevelStartTimer" to="." method="_on_level_start_timer_timeout"]
